--- a/src/components/container/Container.css
+++ b/src/components/container/Container.css
@@ -1,8 +1,22 @@
 .container {
-    border-radius: 0.5rem;
-    font-size: 1.5rem;
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
 }
 
-/* .food_items {
-    background-color: aqua;   teba3 el exemple
-} */
+.food_items {
+    border-radius: 10px;
+  margin-top: 50px;
+  margin-left: 200px;
+  margin-right: 300px;
+  background-color: rgb(255, 255, 255);
+}
+.button-container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 15px;
+  margin-left: 800px;
+  padding-top: 5px;
+  padding-bottom: 30px;
+  padding-right: 30px;
+}
