--- a/src/components/container/Container.css
+++ b/src/components/container/Container.css
@@ -14,8 +14,8 @@
 
 .button-container {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    /* flex-direction: column; */
+    justify-content: space-between;
     width: 15px;
     margin-left: 800px;
     padding-top: 5px;
