--- a/src/components/OrderingItem/OrderingItem.css
+++ b/src/components/OrderingItem/OrderingItem.css
@@ -1,8 +1,17 @@
-.button-container {
+/* .button-container {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
   width: 200px;
+  background-color: red;
+} */
+
+.food-item {
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem;
 }
 
 button {
@@ -27,8 +36,10 @@ input {
 }
 
 hr {
-  border: 1px solid #cecbcb; /* Set the color and style of the line */
+  border: 1px solid #cecbcb;
+  /* Set the color and style of the line */
   margin: 10px 0;
   padding-right: 70px;
-  width:900px;
+
+  overflow-x: hidden;
 }
