--- a/src/components/container/Container.css
+++ b/src/components/container/Container.css
@@ -6,22 +6,22 @@
 
 .food_items {
     border-radius: 10px;
-    margin-top: 50px;
-    margin-left: 200px;
-    margin-right: 300px;
-    background-color: rgb(255, 255, 255);
+    padding: 1rem;
+    background-color: rgb(225, 123, 123);
+    width: 50%;
 }
 
-.button-container {
+/* .button-container {
     display: flex;
-    /* flex-direction: column; */
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-end;
     width: 15px;
     margin-left: 800px;
     padding-top: 5px;
     padding-bottom: 30px;
     padding-right: 30px;
-}
+    background: red;
+} */
 
 
 .cart_button_container {
