--- a/src/components/Cart/CartItem/CartItemInfo.css
+++ b/src/components/Cart/CartItem/CartItemInfo.css
@@ -1,12 +1,3 @@
-
-.cart-item-container {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: fit-content;
-}
-  
 .cart-item,.item-price,.item-quantity,.item-name{
     font-family: 'Roboto', sans-serif;
     padding: 0;
@@ -15,14 +6,14 @@
   
 .item-name {
     font-weight: bold;
+    font-size: 25px;
     color: rgb(80, 80, 80);
-    margin-bottom: 10px;
 }
   
 .item-price {
     color:rgb(128, 56, 56);
     font-weight:bold;
-    font-size: 20px;
+    font-size: 15px;
     margin-right: 50px;
     display: inline-block;
   }
@@ -34,13 +25,8 @@
     border: 1px solid rgba(128, 128, 128, 0.678);
     border-radius: 15%;
     padding: 5px 0.5rem;
+    margin-left: 10px;
     display: inline-block;
 }
-  
-hr {
-    border: 1px solid #c97373; /* Set the color and style of the line */
-    margin: 10px 0;
-    padding-right: 70px;
-    width:500px;
-}
+
   
