--- a/src/components/Description/Description.css
+++ b/src/components/Description/Description.css
@@ -1,7 +1,6 @@
-
 .description-container {
   background-color: #393636;
-  width: 30em;
+  max-width: 30em;
   padding: 20px;
   margin-left: auto;
   margin-right: auto;
@@ -12,12 +11,12 @@
 
 
 .description-container h2 {
-    margin-bottom: 10px; 
-    font-family: cursive;
-  }
-  
-  .description-container p {
-    margin-bottom: 10px; 
-    font-family: system-ui;
-    font-size: 12px;
-  }
+  margin-bottom: 10px;
+  font-family: cursive;
+}
+
+.description-container p {
+  margin-bottom: 10px;
+  font-family: system-ui;
+  font-size: 12px;
+}
