--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,10 @@ body {
   margin: 0;
   padding: 0;
   background-image: url('food.jpg');
-  background-size: cover;
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
+  background-size: cover, cover;
+  background-position: center, center;
+  background-repeat: no-repeat, no-repeat;
 }
-
-
-
-
 
 .food_items-container {
   display: flex;
