Add overlay for the cart menu

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -20,3 +20,21 @@
    text-align: right;
    margin-right: 10px;
 }
+
+.overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: none;
+}
+
+.overlay-visible {
+    display: block;
+}
+
+.overlay-hidden {
+    display: none;
+}
