--- a/src/components/CartButton/CartButton.css
+++ b/src/components/CartButton/CartButton.css
@@ -12,3 +12,9 @@
 }
 
 /* .cart_button_title {} */
+
+@media screen and (max-width: 600px) {
+    .cart_button_counter {
+      font-size: 1.5rem; 
+    }
+  }
