--- a/src/components/Description/Description.css
+++ b/src/components/Description/Description.css
@@ -1,6 +1,6 @@
 
 .description-container {
-  background-color: #393636;
+  background-color: #333; 
   width: 30em;
   padding: 20px;
   margin-left: auto;
@@ -8,6 +8,7 @@
   color: white;
   text-align: center;
   margin-top: 30px;
+  box-shadow: 0 0 30px rgba(255, 255, 255, 0.3); 
 }
 
 
@@ -21,3 +22,15 @@
     font-family: system-ui;
     font-size: 12px;
   }
+
+  .description {
+    width: 100%;
+    height: 17rem;
+    z-index: 0;
+    overflow: hidden;
+    background-image: url('foods.jpg');
+    background-size: cover;
+    position: relative; 
+    
+}
+  
