--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,35 +1,28 @@
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-
-
-
-.inner{
-    width: 80%;
-    margin: auto;
-}
-
-.meal {
-    color: white;
-    font-weight: 600;
-    font-size: 30px; 
-    margin-top: 7.5px; 
-    margin-left: 100px; 
-} */
 
 header {
     box-sizing: border-box;
     width: 100%;
     color: white;
     font-family: sans-serif;
-    background: #B0280B;
+    background-color: #B0280B;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-inline: 7rem;
-
-
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 5rem;
+    padding: 0 10%;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+    z-index: 10;
 }
+  
+@media screen and (max-width: 600px) {
+    .header {
+      font-size: 1.5rem; 
+    }
+  }
+
+  
+
