--- a/src/components/CartButton/CartButton.css
+++ b/src/components/CartButton/CartButton.css
@@ -1,20 +1,20 @@
 .cart_button_counter {
-    background-color: #B94517;
-    border-radius: 1rem;
-    padding: 0.5rem;
-    box-sizing: border-box;
-    padding-inline: 1rem;
+  background-color: #B94517;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  padding-inline: 1rem;
 }
 
 #cart_image {
-    height: 1.5rem;
-    aspect-ratio: 1;
+  height: 1.5rem;
+  /* aspect-ratio: 1; */
 }
 
 /* .cart_button_title {} */
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
     .cart_button_counter {
       font-size: 1.5rem; 
     }
-  }
+  } */
