--- a/src/components/Description/Description.css
+++ b/src/components/Description/Description.css
@@ -1,36 +1,35 @@
-
 .description-container {
-  background-color: #333; 
-  width: 30em;
+  background-color: #333;
+  /* width: 30em; */
+  max-width: 30em;
   padding: 20px;
   margin-left: auto;
   margin-right: auto;
   color: white;
   text-align: center;
   margin-top: 30px;
-  box-shadow: 0 0 30px rgba(255, 255, 255, 0.3); 
+  box-shadow: 0 0 30px rgba(255, 255, 255, 0.3);
 }
 
 
 .description-container h2 {
-    margin-bottom: 10px; 
-    font-family: cursive;
-  }
-  
-  .description-container p {
-    margin-bottom: 10px; 
-    font-family: system-ui;
-    font-size: 12px;
-  }
-
-  .description {
-    width: 100%;
-    height: 17rem;
-    z-index: 0;
-    overflow: hidden;
-    background-image: url('foods.jpg');
-    background-size: cover;
-    position: relative; 
-    
+  margin-bottom: 10px;
+  font-family: cursive;
 }
-  
+
+.description-container p {
+  margin-bottom: 10px;
+  font-family: system-ui;
+  font-size: 12px;
+}
+
+.description {
+  width: 100%;
+  height: 17rem;
+  z-index: 0;
+  overflow: hidden;
+  background-image: url('foods.jpg');
+  background-size: cover;
+  position: relative;
+
+}
