--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,28 +1,29 @@
-
 header {
-    box-sizing: border-box;
-    width: 100%;
-    color: white;
-    font-family: sans-serif;
-    background-color: #B0280B;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-inline: 7rem;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 5rem;
-    padding: 0 10%;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    z-index: 10;
+  box-sizing: border-box;
+  /* width: 100%; */
+  color: white;
+  font-family: sans-serif;
+  background-color: #B0280B;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 7rem;
+
+  padding-block: 0.7rem;
+  overflow: hidden;
 }
-  
+
+/* 
 @media screen and (max-width: 600px) {
-    .header {
-      font-size: 1.5rem; 
-    }
+  .header {
+    font-size: 1.5rem;
+  }
+} */
+
+@media (max-width: 768px) {
+  header {
+    flex-wrap: wrap;
+    justify-content: center;
   }
 
-  
-
+}
